homepage background color change

--- a/entries/homepage/style_home.css
+++ b/entries/homepage/style_home.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #a4bfba; /* 背景颜色 */
+  background-color: #E5E5E5; /* 背景颜色 */
   display: flex;
   justify-content: center;
   align-items: center;
