--- a/entries/homepage/style_home.css
+++ b/entries/homepage/style_home.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #E5E5E5; /* 背景颜色 */
+  background-color: #e5e5e5; /* 背景颜色 */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,46 +33,46 @@ body {
 }
 
 .container {
-    text-align: center;
-    position: relative;
+  text-align: center;
+  position: relative;
 }
 
 .candy {
-    position: absolute;
-    transition: transform 0.6s ease; /* 动画效果 */
+  position: absolute;
+  transition: transform 0.6s ease; /* 动画效果 */
 }
 
 .candy:hover {
-    transform: rotate(360deg); /* 旋转效果 */
+  transform: rotate(360deg); /* 旋转效果 */
 }
 
 #candy1 {
-    top: 162px;
-    left: 318px;
-    width: 110px;
+  top: 162px;
+  left: 318px;
+  width: 110px;
 }
 
 #candy2 {
-    top: 250px;
-    left: 400px;
-    width: 90px;
+  top: 250px;
+  left: 400px;
+  width: 90px;
 }
 
 #candy3 {
-    top: 110px;
-    left: 400px;
+  top: 110px;
+  left: 400px;
 }
 
 #candy4 {
-    top: 300px;
-    left: 310px;
-    width: 70px;
+  top: 300px;
+  left: 310px;
+  width: 70px;
 }
 
 #candy5 {
-    top: 210px;
-    left: 180px;
-    width: 80px;
+  top: 210px;
+  left: 180px;
+  width: 80px;
 }
 
 #candy6 {
@@ -86,4 +86,10 @@ body {
   top: 200px;
   left: 700px;
   width: 80px;
+}
+
+#candy8 {
+  top: 70px;
+  left: 600px;
+  width: 120px;
 }
