--- a/entries/homepage/style_home.css
+++ b/entries/homepage/style_home.css
@@ -92,13 +92,17 @@ body {
   top: 70px;
   left: 600px;
   width: 120px;
-
-  
 }
 #candy9 {
   top: 280px;
   left: -10px;
   height: 100px;
+}
+#candy10 {
+  top: 300px;
+  left: 600px;
+  height: 90px;
+  rotate: 20deg;
 }
 /* Responsive styling for iPhone 16 (example: max-width 430px for mobile) */
 @media (max-width: 830px) {
@@ -149,14 +153,14 @@ body {
   }
 
   #candy7 {
-    top: 160px;
-    left: 210px;
+    top: 90px;
+    left: 220px;
     width: 45px;
   }
 
   #candy8 {
-    top: 40px;
-    left: 220px;
+    top: 20px;
+    left: 202px;
     width: 55px;
   }
 
@@ -164,5 +168,11 @@ body {
     top: 140px;
     left: -50px;
     height: 50px;
+  }
+  
+  #candy10 {
+    top: 150px;
+    left: 203px;
+    height: 30px;
   }
 }
