--- a/entries/entry11/style11.css
+++ b/entries/entry11/style11.css
@@ -8,6 +8,7 @@
 }
 body {
   background-color: #b3c9ea;
+  display: wrap;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -42,7 +43,7 @@ body {
 /* 标题样式 */
 header h1 {
   font-family: "Abril Fatface";
-  font-size: 2.5em;
+  font-size: 2.5vw;
   font-weight: bold;
   margin-top: 30px;
 }
@@ -52,7 +53,7 @@ header .intro {
   font-family: "Poppins";
   margin: 15px auto;
   max-width: 800px;
-  font-size: 1.2em;
+  font-size: 1.2vw;
   line-height: 1.6;
   color: #444;
 }
@@ -74,9 +75,12 @@ footer .essay {
   font-size: 1.1em;
   color: #555;
 }
-#p5-container {
-  width: 100%;
-  height: 600px; /* 与 canvas 高度一致 */
-  margin: 0 auto;
-  display: block;
+
+footer .essay {
+  margin: 30px auto;
+  padding: 20px;
+  max-width: 800px;
+  line-height: 1.8;
+  font-size: 1.1em;
+  color: #555;
 }
