--- a/entries/entry1/style.css
+++ b/entries/entry1/style.css
@@ -17,11 +17,32 @@ body {
   text-align: center;
 }
 
+.navbar {
+  display: flex;
+  justify-content: center;
+  top: 0;
+  width: 100%;
+  margin-top: 0; /* Remove margin-top */
+}
+
+.nav-logo {
+  max-width: 50px; /* Adjust the size of the image */
+  height: auto;
+  cursor: pointer;
+}
+
+.nav-logo:hover {
+  opacity: 0.8; /* Optional hover effect */
+  transform: scale(0.8);
+  transition: transform 0.3s ease-in-out;
+}
+
 h1 {
   font-family: "Notable";
   text-align: center;
   color: DodgerBlue;
-  font-size: 120px;
+  font-size: 8vw;
+  margin-top: 0; /* Remove any top margin */
 }
 
 h1 a {
@@ -60,7 +81,7 @@ h1 a {
   text-align: center;
 }
 .blue {
-  font-size: 4.5em;
+  font-size: 4.5vw;
   font-weight: bold;
   margin-top: 100px;
   letter-spacing: 0.1em;
