--- a/entries/entry5/style5.css
+++ b/entries/entry5/style5.css
@@ -47,6 +47,7 @@ p {
 .image-content {
   flex: 0 0 150px; /* Adjust this to fit your image size */
   position: relative;
+  z-index: 10;
 }
 
 .image-content img {
