--- a/entries/entry11/style11.css
+++ b/entries/entry11/style11.css
@@ -64,23 +64,24 @@ main {
   width: 100%;
 }
 
-/* 文章样式 */
-footer .essay {
-  font-family: "Poppins";
-  text-align: left;
-  margin: 30px auto;
-  padding: 20px;
-  max-width: 800px;
-  line-height: 1.8;
-  font-size: 1.1em;
-  color: #555;
-}
 
-footer .essay {
-  margin: 30px auto;
-  padding: 20px;
-  max-width: 800px;
-  line-height: 1.8;
-  font-size: 1.1em;
-  color: #555;
+
+@media (max-width: 768px) {
+
+  header h1 {
+    font-family: "Abril Fatface";
+    font-size: 4.5vw;
+    font-weight: bold;
+    margin-top: 30px;
+  }
+  
+  header .intro {
+    font-style: italic;
+    font-family: "Poppins";
+    margin: 15px auto;
+    max-width: 800px;
+    font-size:3vw;
+    line-height: 1.6;
+    color: #444;
+  }
 }
