--- a/entries/entry4/style4.css
+++ b/entries/entry4/style4.css
@@ -11,6 +11,32 @@
   src: url(./fonts/Poppins/Poppins-Medium.ttf);
 }
 
+.navbar {
+  position: absolute; /* 或 fixed，如果希望其固定在屏幕顶部 */
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: transparent; /* 透明背景 */
+  z-index: 1000; /* 确保在其他内容之上 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0; /* 确保无多余间距 */
+  margin-top: 20px; /* 确保无多余间距 */
+}
+
+.nav-logo {
+  max-width: 150px; /* Adjust the size of the image */
+  height: auto;
+  cursor: pointer;
+}
+
+.nav-logo:hover {
+  opacity: 0.8; /* Optional hover effect */
+  transform: scale(0.8);
+  transition: transform 0.3s ease-in-out; 
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(6, 1fr); /* 创建6列，每列等宽 */
@@ -41,6 +67,7 @@
 }
 
 .grid-item3 {
+  position: relative;
   background-color: #ff1ebc; /* 背景色 */
   display: flex; /* 使内容居中 */
   justify-content: center; /* 水平居中 */
@@ -50,6 +77,7 @@
 }
 
 .grid-item4 {
+  position: relative;
   background-color: #ffde32; /* 背景色 */
   display: flex; /* 使内容居中 */
   justify-content: center; /* 水平居中 */
@@ -61,8 +89,6 @@
 .content-normal,
 .content-hover {
   position: absolute;
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,15 +140,18 @@
     grid-template-rows: repeat(12, 1fr); /* 12 rows for mobile */
   }
 
-  .grid-item2 {
+  .grid-item,
+  .grid-item2,
+  .grid-item3,
+  .grid-item4 {
     font-size: 30px; /* Adjust font size for mobile */
-    overflow-y: clip;
+    overflow-y: scroll;
   }
 
   .content-normal,
   .content-hover {
     font-size: 14px; /* Adjust font size for mobile */
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 }
 
@@ -131,16 +160,18 @@
     grid-template-columns: repeat(3, 1fr); /* 3 columns for tablet */
     grid-template-rows: repeat(8, 1fr); /* 8 rows for tablet */
   }
-
-  .grid-item2 {
+  .grid-item,
+  .grid-item2,
+  .grid-item3,
+  .grid-item4 {
     font-size: 45px; /* Adjust font size for tablet */
-    overflow-y: clip;
+    overflow-y: scroll;
   }
 
   .content-normal,
   .content-hover {
     font-size: 16px; /* Adjust font size for tablet */
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 }
 
@@ -150,15 +181,18 @@
     grid-template-rows: repeat(6, 1fr); /* 6 rows for desktop */
   }
 
-  .grid-item2 {
+  .grid-item,
+  .grid-item2,
+  .grid-item3,
+  .grid-item4 {
     font-size: 60px; /* Adjust font size for desktop */
-    overflow-y: clip;
+    overflow-y: scroll;
   }
 
   .content-normal,
   .content-hover {
     font-size: 18px; /* Adjust font size for desktop */
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 }
 
@@ -176,6 +210,6 @@
   .content-normal,
   .content-hover {
     font-size: 20px; /* Adjust font size for large desktop */
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 }
