--- a/entries/entry9/style9.css
+++ b/entries/entry9/style9.css
@@ -14,7 +14,7 @@
 body {
   margin: 0;
   height: 100vh;
-  background: #111;
+  background: #EA9697;
   display: flex;
   justify-content: center;
   align-items: center;
