--- a/entries/entry7/style7.css
+++ b/entries/entry7/style7.css
@@ -50,7 +50,7 @@ body {
 .widget {
     background-color: #F6F6F1;
     border-radius: 20px;
-    display: block;
+    display: flex;
     margin-bottom: 1em;
     justify-content: center;
     align-items: center;
