--- a/entries/homepage/style_home.css
+++ b/entries/homepage/style_home.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #A4BFBA; /* 背景颜色 */
+  background-color: #FFAD2B; /* 背景颜色 */
   display: flex;
   justify-content: center;
   align-items: center;
