--- a/entries/entry10/style10.css
+++ b/entries/entry10/style10.css
@@ -23,40 +23,40 @@ body {
 }
 
 nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2em;
-    z-index: 10;
-    pointer-events: none;
-  }
-  
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: "Poppins";
-    font-size: 28px;
-    pointer-events: all;
-  }
-  
-  nav button {
-    border: none;
-    outline: none;
-    color: #fff;
-    background-color: #0C00E8;
-    border-radius: 6em;
-    padding: 0.25em 1em 0.25em 1em;
-    text-transform: uppercase;
-    font-family: "Poppins";
-    font-size: 24px;
-    pointer-events: all;
-    cursor: pointer;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2em;
+  z-index: 10;
+  pointer-events: none;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Poppins";
+  font-size: 28px;
+  pointer-events: all;
+}
+
+nav button {
+  border: none;
+  outline: none;
+  color: #fff;
+  background-color: #0c00e8;
+  border-radius: 6em;
+  padding: 0.25em 1em 0.25em 1em;
+  text-transform: uppercase;
+  font-family: "Poppins";
+  font-size: 24px;
+  pointer-events: all;
+  cursor: pointer;
+}
 
 .navbar {
   display: flex;
@@ -112,13 +112,13 @@ nav {
   overflow: hidden;
 }
 .tile-front {
-    background-color: darkslategray;
-  }
-  
-  .tile-back {
-    background-color: darkslateblue;
-    transform: rotateX(180deg);
-  }
+  background-color: darkslategray;
+}
+
+.tile-back {
+  background-color: darkslateblue;
+  transform: rotateX(180deg);
+}
 .tile-front::before,
 .tile-back::before {
   content: "";
